[package]
name = "mecha-sdk"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/mecha-sdk"
homepage = "https://github.com/Dhruvesh08/mecha-sdk"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.20.6"